--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,36 +1,44 @@
 ---
-layout: default
+layout: base
 ---
 
-<div id="{{ page.site-section }}" class="u-container">
-  <article>
-    <div class="article-info">
-      <h1>{{ page.title }}
-        <span class="subtitle thin">{{ page.subtitle }}</span>
-      </h1>
-      <p class="attribution" itemscope="" itemtype="http://schema.org/Person">
-        by <a href="/about/" itemprop="name">Sam Selikoff</a>
-        <span class="u-pull-right">{{ page.date | date: "%B %-d, %Y" }}</span>
-      </p>
+{% include header.html %}
+
+<section class="main">
+  <div id="{{ page.site-section }}" class="u-container">
+    <article>
+      <div class="article-info">
+        <h1>{{ page.title }}
+          <span class="subtitle thin">{{ page.subtitle }}</span>
+        </h1>
+        <p class="attribution" itemscope="" itemtype="http://schema.org/Person">
+          by <a href="/about/" itemprop="name">Sam Selikoff</a>
+          <span class="u-pull-right">{{ page.date | date: "%B %-d, %Y" }}</span>
+        </p>
+      </div>
+
+      {{ content }}
+    </article>
+
+    <div class="comments">
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'samselikoff'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
     </div>
-
-    {{ content }}
-  </article>
-
-  <div class="comments">
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'samselikoff'; // required: replace example with your forum shortname
-
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
   </div>
-</div>
+</section>
+
+<footer id="menu" class="inverted">
+  {% include footer.html %}
+</footer>
