Update style for box, listing

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -33,5 +33,6 @@
 @import 'modules/listing';
 @import 'modules/title';
 @import 'modules/box';
+@import 'modules/inverted';
 
 @import 'modules/mainHeader';
