--- a/_sass/modules/_box.scss
+++ b/_sass/modules/_box.scss
@@ -3,6 +3,7 @@
   background-color: white;
   border-top: 8px solid $red;
   padding: 14px;
+  color: $black;
 }
 .box-small {
   padding: 0.5em;
@@ -10,4 +11,14 @@
 .box-left {
   border-top: none;
   border-left: 4px solid #DB4D3E;
+}
+.box a {
+  font-weight: 500;
+  font-size: 1.1em;
+  line-height: 1.1;
+  margin: 0;
+  display: block;
+}
+.box .date {
+  font-size: 0.8em;
 }
