--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div id="{{ page.site-section }}" class="u-container">
+<div id="{{ page.site-section }}">
   <h1>{{ page.title }}</h1>
   <h2>{{ page.subtitle }}</h2>
   <p class="attribution" itemscope="" itemtype="http://schema.org/Person">
