--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -26,6 +26,8 @@
 // @import 'modules/about';
 
 
+@import 'modules/dividers';
+@import 'modules/attribution';
 @import 'modules/container';
 @import 'modules/article';
 @import 'modules/stories';
