--- a/_compass/tools/_utilities.scss
+++ b/_compass/tools/_utilities.scss
@@ -127,3 +127,8 @@
 .u-subtle-link:visited:focus {
   text-decoration: none;
 }
+.u-lead {
+  font-size: 1.3em;
+  font-weight: 300;
+  line-height: 1.2;
+}
