--- a/_compass/modules/_box.scss
+++ b/_compass/modules/_box.scss
@@ -20,7 +20,7 @@
     line-height: 16px;
     color: #555;
   }
-  p {
+  .box-byline {
     margin-bottom: 0;
     line-height: 2;
     font-size: 0.75em;
