--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -26,6 +26,7 @@
 // @import 'modules/about';
 
 
+@import 'modules/links';
 @import 'modules/dividers';
 @import 'modules/attribution';
 @import 'modules/container';
