--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -40,5 +40,6 @@ layout: base
 </section>
 
 <footer id="menu" class="inverted">
-  {% include footer.html %}
+  {% include nav.html %}
+  {% include contact.html %}
 </footer>
