--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,6 @@ layout: base
 </section>
 
 <footer id="menu">
-  {% include footer.html %}
+  {% include nav.html %}
+  {% include contact.html %}
 </footer>
