--- a/_compass/modules/_box.scss
+++ b/_compass/modules/_box.scss
@@ -2,9 +2,21 @@
   margin-bottom: 1em;
   background-color: white;
   border-top: 8px solid $red;
-  padding: 14px;
   color: $black;
 
+  .box-header {
+    background-color: $red;
+    padding: 0 14px 8px;
+  }
+  .box-header-title {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: $white;
+    margin: 0;
+  }
+  .box-body {
+    padding: 14px;
+  }
   .box-title {
     font-weight: 500;
     font-size: 20px;
@@ -25,11 +37,26 @@
     line-height: 2;
     font-size: 0.75em;
   }
+  .box-listing {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+
+    li {
+      line-height: 1.1;
+      margin-bottom: 10px;
+    }
+  }
 }
 
 .box-small {
-  padding: 0.5em;
 
+  .box-header {
+    padding: 0 8px 6px;
+  }
+  .box-body {
+    padding: 0.5em;
+  }
   .box-title {
     font-size: 17px;
   }
