updating home page

--- a/_compass/tools/_utilities.scss
+++ b/_compass/tools/_utilities.scss
@@ -27,6 +27,9 @@
 .u-margin-top {
   margin-top: 10px;
 }
+.u-margin-bottom {
+  margin-bottom: 2em !important;
+}
 .u-margin-top-large {
   margin-top: 30px;
 }
