--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,6 @@
   <li><a class='footer-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
   <li><a class='footer-link' href="/speaking"><span class="u-accent"></span> speaking <span class="u-accent"></span></a></li>
   <li><a class='footer-link' href="/writing"><span class="u-accent"></span> writing <span class="u-accent"></span></a></li>
-  <li><a class='footer-link' href="/projects"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
+  <li><a class='footer-link' href="/work"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
   <li><a class='footer-link' href="/about"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
 </ul>
