--- a/_compass/modules/_page-header.scss
+++ b/_compass/modules/_page-header.scss
@@ -10,6 +10,14 @@
     // margin: 0;
   }
 
+  .page-header-subtitle {
+    font-size: 1.1em;
+    padding-bottom: 1.3em;
+    line-height: 1.25;
+    margin: 1em 0;
+    border-bottom: solid 1px #c9c9c9;
+    margin-top: .25em;
+  }
   .subtitle {
     margin: 0;
     font-size: 26px;
