--- a/_compass/modules/_inverted.scss
+++ b/_compass/modules/_inverted.scss
@@ -2,6 +2,10 @@
   background-color: $background-alt;
   color: $white;
 }
+.inverted-strong {
+  background-color: $darkBlue;
+  color: $white;
+}
 .inverted-text {
   color: $white;
 }
