--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -38,5 +38,8 @@
 @import 'modules/title';
 @import 'modules/box';
 @import 'modules/inverted';
+@import 'modules/super-link';
 
 @import 'modules/mainHeader';
+
+@import 'pages/home';
