--- a/_compass/pages/_home.scss
+++ b/_compass/pages/_home.scss
@@ -1,5 +1,10 @@
 .home-section {
-  padding: 1.5em 1em;
+  // padding: 1.5em 1em;
+  padding-top: 1.8em;
+
+  .box {
+    margin-bottom: 1.8em;
+  }
 }
 .home-nav {
 }
