--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -38,6 +38,8 @@
 @import 'modules/title';
 @import 'modules/box';
 @import 'modules/inverted';
+@import 'modules/sunken';
+@import 'modules/shadow';
 
 @import 'modules/mainHeader';
 
