--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<header class='mainHeader_large u-shadow'>
+<header class='mainHeader_large shadow'>
   <div class="u-container">
     <div class="mainHeader-info">
       <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
