--- a/_compass/modules/_mainHeader.scss
+++ b/_compass/modules/_mainHeader.scss
@@ -6,7 +6,9 @@
 }
 .mainHeader_large {
   @extend .mainHeader;
-  padding: 6em 0 5em;
+  // padding: 6em 0 5em;
+  padding: 6em 0;
+  // @include background-image(linear-gradient(to bottom, #2e4752 90%,#3e606f 100%));
 }
 .mainHeader-logo {
   text-transform: uppercase;
@@ -34,7 +36,9 @@
   text-transform: uppercase;
 }
 .mainHeader-aboutLink {
-  margin-top: 3em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  // margin-top: 3em;
 }
 .mainHeader-aboutLink a,
 .mainHeader-aboutLink a:visited {
