--- a/_compass/tools/_utilities.scss
+++ b/_compass/tools/_utilities.scss
@@ -57,9 +57,7 @@
   margin: 14px 0;
 }
 .u-clearfix {
-  zoom: 1;
-  &:before, &:after { content: ""; display: table; }
-  &:after { clear: both; }
+  @include clearfix;
 }
 .u-row {
   display: inline-block;
