--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class='mainHeader u-subtle-shadow'>
+<header class='mainHeader shadow-subtle'>
   <div class="mainHeader-info u-pull-left">
     <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
   </div>
