--- a/_compass/modules/_shadow.scss
+++ b/_compass/modules/_shadow.scss
@@ -3,7 +3,7 @@
   position: relative;
 }
 .shadow-subtle {
-  @include box-shadow(0px 2px 4px 0px rgba(0,0,0,0.55));
+  @include box-shadow(0px 0px 2px 2px rgba(0, 0, 0, 0.35));
   position: relative;
 }
 .shadow-floating {
