--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -6,7 +6,7 @@ layout: default
   <h1>{{ page.title }}</h1>
   {% if page.subtitle %}<h2>{{ page.subtitle }}</h2>{% endif %}
   <p class="attribution" itemscope="" itemtype="http://schema.org/Person">
-    <a href="/about/" class="u-subtle-link" itemprop="name">Sam Selikoff</a>
+    <a href="/about/" class="link-subtle" itemprop="name">Sam Selikoff</a>
   </p>
 
   <hr class="divider-main">
