Update ember talk

--- a/_compass/modules/_dividers.scss
+++ b/_compass/modules/_dividers.scss
@@ -4,3 +4,8 @@
   margin-bottom: 1em;
   margin-top: 0;
 }
+.divider-subtle {
+  margin: 9px 0;
+  border-style: dashed;
+  border-top-color: #ddd;
+}
