--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -40,6 +40,7 @@
 @import 'modules/inverted';
 @import 'modules/sunken';
 @import 'modules/shadow';
+@import 'modules/fixed-ar-container';
 
 @import 'modules/mainHeader';
 
