--- a/_compass/tools/_utilities.scss
+++ b/_compass/tools/_utilities.scss
@@ -21,6 +21,9 @@
 .u-no-bottom-margin {
   margin-bottom: 0;
 }
+.u-negative-margin-top {
+  margin-top: -20px;
+}
 .u-no-top-margin {
   margin-top: 0;
 }
