--- a/_compass/modules/_fixed-ratio.scss
+++ b/_compass/modules/_fixed-ratio.scss
@@ -1,18 +1,17 @@
-.fixed-ar-container {
+.fixed-ratio {
   position: relative;
   padding-top: 62.25%;  // Video height / width.
   height: 0;
-  @include clearfix;
 }
-.fixed-ar-container-inner {
+.fixed-ratio-inner {
   position: absolute;
   top: 0;
   height: 100%;
   width: 100%;
 }
-.fixed-ar-container-widescreen {
-  padding-top: 62.25%;  // Video height / width.
+.fixed-ratio-video {
+  padding-top: 56.25%;  // Video height / width.
 }
-.fixed-ar-container-slides {
+.fixed-ratio-slides {
   padding-top: 72.916%;  // Video height / width.
 }
