Update rest of talks

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -25,7 +25,7 @@ layout: default
     <section class='u-margin-bottom'>
       <h2>Slides</h2>
       <div class="fixed-ratio fixed-ratio-slides">
-        <iframe class='fixed-ratio-inner' src="{{page.slides}}/embed" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe class='fixed-ratio-inner' src="{{page.slides}}/embed?style=hidden" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </section>
   {% endif %}
