Refactor container class

--- a/_compass/modules/_container.scss
+++ b/_compass/modules/_container.scss
@@ -1,3 +1,11 @@
 .container {
+  @include container(100%);
+  @include clearfix;
+
+  @media screen and (min-width: 52em) {
+    max-width: 62.5em;
+  }
+}
+.container-padding {
   padding: 5% 5% 0 5%;
 }
