--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header class='mainHeader shadow-subtle'>
-  <div class="mainHeader-info u-pull-left">
-    <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
-  </div>
-  <div class="mainHeader-menu u-pull-right">
-    <a href="#menu">Menu</a>
+  <div class="container">
+    <div class="mainHeader-info u-pull-left">
+      <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
+    </div>
+    <div class="mainHeader-menu u-pull-right">
+      <a href="#menu">Menu</a>
+    </div>
   </div>
 </header>
