--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -5,7 +5,7 @@ layout: base
 {% include header.html %}
 
 <section class="main">
-  <div id="{{ page.site-section }}" class="u-container">
+  <div id="{{ page.site-section }}" class="container container-padding">
     <article>
       <h1>{{ page.title }}
         <span class="subtitle thin">{{ page.subtitle }}</span>
