--- a/_layouts/inverted.html
+++ b/_layouts/inverted.html
@@ -4,7 +4,7 @@ layout: base
 
 {% include header.html %}
 
-<section class="main u-container inverted">
+<section class="container container-padding inverted">
   {{ content }}
 </section>
 
