--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<header class='mainHeader shadow-subtle'>
+<header class='header shadow-subtle'>
   <div class="container">
-    <div class="mainHeader-info u-pull-left">
-      <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
+    <div class="header-info u-pull-left">
+      <a class='header-logo' href='/'>Sam<span>Selikoff</span></a>
     </div>
-    <div class="mainHeader-menu u-pull-right">
+    <div class="header-menu u-pull-right">
       <a href="#menu">Menu</a>
     </div>
   </div>
