--- a/_compass/pages/_home.scss
+++ b/_compass/pages/_home.scss
@@ -6,3 +6,11 @@
     margin-bottom: 1.8em;
   }
 }
+[role='complementary'] {
+  width: 30%;
+  float: left;
+}
+[role='main'] {
+  width: 70%;
+  float: left;
+}
