--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -33,6 +33,7 @@
 @import 'modules/sunken';
 @import 'modules/shadow';
 @import 'modules/fixed-ratio';
+@import 'modules/responsive';
 
 
 @import 'pages/home';
