--- a/_compass/modules/_links.scss
+++ b/_compass/modules/_links.scss
@@ -32,4 +32,10 @@
 .link-subtle:visited:focus {
   text-decoration: none;
 }
+.link-deunderlined:hover,
+.link-deunderlined:focus,
+.link-deunderlined:visited:hover,
+.link-deunderlined:visited:focus {
+  text-decoration: none;
+}
 
