--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -34,6 +34,8 @@
 @import 'modules/shadow';
 @import 'modules/fixed-ratio';
 @import 'modules/responsive';
+@import 'modules/page-splitter';
+@import 'modules/logo';
 
 
 @import 'pages/home';
