--- a/_compass/tools/_settings.scss
+++ b/_compass/tools/_settings.scss
@@ -11,6 +11,7 @@ $serif:             "Georgia", Cambria, Times New Roman, Times, serif;
 */
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1030px;
+$main-breakpoint: 840px;
 
 /*
   Susy config
