--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -1,12 +1,12 @@
-<header class='header_large shadow hidden-lg'>
-  <div class="container">
-    <div class="header-info">
-      <a class='header-logo' href='/'>Sam<span>Selikoff</span></a>
-      <p>web development · economics</p>
-    </div>
-    
-    <p class='header-aboutLink'><a href="/about">
-      <span class="u-accent">[</span> about <span class="u-accent">]</span>
-    </a></p>
+<div class='container'>
+  <div class='header-info logo'>
+    <a class='logo-title' href='/'>Sam<span class='logo-strong'>Selikoff</span></a>
+    <p class='logo-subtitle'>web development · economics</p>
   </div>
-</header>
+  
+  <p class='header-aboutLink'>
+    <span class='u-accent'>[</span>
+    <a class='link-' href='/about'>about</a>
+    <span class='u-accent'>]</span>
+  </p>
+</div>
