Refactor mobile nav

--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -36,6 +36,7 @@
 @import 'modules/responsive';
 @import 'modules/page-splitter';
 @import 'modules/logo';
+@import 'modules/mobile-menu';
 
 
 @import 'pages/home';
