--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
-<ul>
-  <li class="footer-topNavLink"><a href="#top"><span>Top</span></a></li>
-  <li><a class='footer-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
-  <li><a class='footer-link' href="/talks"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
-  <li><a class='footer-link' href="/writings"><span class="u-accent"></span> writings <span class="u-accent"></span></a></li>
-  <li><a class='footer-link' href="/work"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
-  <li><a class='footer-link' href="/about"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
-</ul>
+<nav id="menu" class='mobile-menu'>
+  <ul class='mobile-menu-list'>
+    <li class="mobile-menu-back"><a href="#top"><span>Top</span></a></li>
+    <li><a class='mobile-menu-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
+    <li><a class='mobile-menu-link' href="/talks"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
+    <li><a class='mobile-menu-link' href="/writings"><span class="u-accent"></span> writings <span class="u-accent"></span></a></li>
+    <li><a class='mobile-menu-link' href="/work"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
+    <li><a class='mobile-menu-link' href="/about"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
+  </ul>
+</nav>
