--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -24,7 +24,8 @@ layout: base
   </div>
 </section>
 
-<footer id="menu" class="inverted">
-  {% include nav.html %}
+{% include nav.html %}
+
+<footer class="inverted">
   {% include contact.html %}
 </footer>
