--- a/_layouts/inverted.html
+++ b/_layouts/inverted.html
@@ -8,7 +8,10 @@ layout: base
   {{ content }}
 </section>
 
-<footer id="menu">
+<div class="inverted">
   {% include nav.html %}
+</div>
+
+<footer>
   {% include contact.html %}
 </footer>
