--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@ layout: base
   {{ content }}
 </section>
 
-<footer id="menu">
-  {% include nav.html %}
+{% include nav.html %}
+
+<footer>
   {% include contact.html %}
 </footer>
