--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -25,7 +25,4 @@ layout: base
 </section>
 
 {% include nav.html %}
-
-<footer class="inverted">
-  {% include contact.html %}
-</footer>
+{% include footer.html %}
