--- a/_compass/layouts/_footer.scss
+++ b/_compass/layouts/_footer.scss
@@ -1,27 +1,20 @@
-footer {
+.footer {
   clear: both;
-  background-color: $blue;
-  // text-align: center;
-  font-size: 1.1em;
-  p {
-    margin: 0;
-  }
-  aside {
-    background-color: #111;
+  background-color: #111;
+  font-size: 0.85em;
+  @include clearfix;
+  
+  .footer-content {
     padding: 2em 1em;
-    font-size: 0.75em;
-    @include clearfix;
-  }
-  .aside-text {
     color: #555;
   }
-  .aside-info {
-    width: 70%;
-  }
-  .aside-social img {
-    background-color: #bbb;
+  .footer-link {
     float: right;
-    border: 1px solid #666;
+    padding-left: 10px;
+  }
+  .footer-link-img {
+    background-color: #bbb;
     height: 35px;
+    border: 1px solid #666;
   }
 }
