--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -37,6 +37,7 @@
 @import 'modules/page-splitter';
 @import 'modules/logo';
 @import 'modules/mobile-menu';
+@import 'modules/utilities';
 
 
 @import 'pages/home';
