--- a/_compass/modules/_inverted.scss
+++ b/_compass/modules/_inverted.scss
@@ -1,6 +1,10 @@
 .inverted {
   background-color: $background-alt;
   color: $white;
+
+  @include above($main-breakpoint) {
+    background-color: transparent;
+  }
 }
 .inverted-strong {
   background-color: $darkBlue;
