--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -1,12 +1,10 @@
-<div class='container'>
-  <div class='header-info logo'>
-    <a class='logo-title' href='/'>Sam<span class='logo-strong'>Selikoff</span></a>
-    <p class='logo-subtitle'>web development · economics</p>
-  </div>
-  
-  <p class='header-aboutLink'>
-    <span class='u-accent'>[</span>
-    <a class='link-' href='/about'>about</a>
-    <span class='u-accent'>]</span>
-  </p>
+<div class='header-info logo'>
+  <a class='logo-title logo-title-strong' href='/'>Sam<span class='logo-accent'>Selikoff</span></a>
+  <p class='logo-subtitle'>web development · economics</p>
 </div>
+
+<p class='header-aboutLink'>
+  <span class='u-accent'>[</span>
+  <a class='link-' href='/about'>about</a>
+  <span class='u-accent'>]</span>
+</p>
