--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class='header shadow-subtle'>
   <div class="container">
     <div class="header-info u-pull-left logo">
-      <a class='logo-title' href='/'>Sam<span class='logo-strong'>Selikoff</span></a>
+      <a class='logo-title' href='/'>Sam<span class='logo-accent'>Selikoff</span></a>
     </div>
     <div class="header-menu u-pull-right">
       <a href="#menu">Menu</a>
