More touching up

--- a/_compass/modules/_inverted.scss
+++ b/_compass/modules/_inverted.scss
@@ -3,7 +3,7 @@
   color: $white;
 
   @include above($main-breakpoint) {
-    background-color: transparent;
+    // background-color: transparent;
   }
 }
 .inverted-strong {
