--- a/_layouts/inverted.html
+++ b/_layouts/inverted.html
@@ -4,8 +4,10 @@ layout: base
 
 {% include header.html %}
 
-<section class="container container-padding inverted">
-  {{ content }}
+<section class="inverted">
+  <div class="container container-padding">
+    {{ content }}
+  </div>
 </section>
 
 <div class="inverted">
