--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
-<header class='header shadow-subtle'>
-  <div class="container">
-    <div class="header-info u-pull-left logo">
-      <a class='logo-title' href='/'>Sam<span class='logo-accent'>Selikoff</span></a>
-    </div>
-    <div class="header-menu u-pull-right">
-      <a href="#menu">Menu</a>
-    </div>
-  </div>
-</header>
+<div class='header-info logo'>
+  <a class='logo-title logo-title-strong' href='/'>Sam<span class='logo-accent'>Selikoff</span></a>
+  <p class='logo-subtitle'>web development · economics</p>
+</div>
+
+<p class='header-aboutLink'>
+  <span class='u-accent'>[</span>
+  <a class='link-' href='/about'>about</a>
+  <span class='u-accent'>]</span>
+</p>
