--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -1,4 +1,4 @@
-<nav id="menu" class='mobile-menu'>
+<nav id="menu" class='mobile-menu hidden-lg'>
   <ul class='mobile-menu-list'>
     <li class="mobile-menu-back"><a href="#top"><span>Top</span></a></li>
     <li><a class='mobile-menu-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
