--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-{% include header.html %}
+{% include mobile-header.html %}
 
 <section class="main">
   <div id="{{ page.site-section }}" class="container container-padding">
@@ -24,5 +24,5 @@ layout: base
   </div>
 </section>
 
-{% include nav.html %}
+{% include mobile-nav.html %}
 {% include footer.html %}
