--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 layout: base
 ---
 
-{% include header.html %}
+{% include mobile-header.html %}
 
 <section class="main container container-padding">
   {{ content }}
 </section>
 
-{% include nav.html %}
+{% include mobile-nav.html %}
 {% include footer.html %}
