--- a/_compass/modules/_shadow.scss
+++ b/_compass/modules/_shadow.scss
@@ -1,12 +1,15 @@
 .shadow {
   @include box-shadow(0px 1px 5px 2px rgba(0,0,0,0.5));
   position: relative;
+  z-index: 9;
 }
 .shadow-subtle {
   @include box-shadow(0px 0px 2px 2px rgba(0, 0, 0, 0.35));
   position: relative;
+  z-index: 9;
 }
 .shadow-floating {
   @include box-shadow(0 0px 6px 4px rgba(0,0,0,0.25));
   position: relative;
+  z-index: 9;
 }
