--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -39,6 +39,7 @@
 @import 'modules/logo';
 @import 'modules/mobile-menu';
 @import 'modules/utilities';
+@import 'modules/nav';
 
 
 @import 'pages/home';
