--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -1,10 +1,10 @@
 <nav id="menu" class='mobile-menu hidden-lg'>
   <ul class='mobile-menu-list'>
     <li class="mobile-menu-back"><a href="#top"><span>Top</span></a></li>
-    <li><a class='mobile-menu-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
-    <li><a class='mobile-menu-link' href="/talks"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
-    <li><a class='mobile-menu-link' href="/writings"><span class="u-accent"></span> writings <span class="u-accent"></span></a></li>
-    <li><a class='mobile-menu-link' href="/work"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
-    <li><a class='mobile-menu-link' href="/about"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
+    <li><a class='mobile-menu-link' href="/blog">blog </a></li>
+    <li><a class='mobile-menu-link' href="/talks">talks </a></li>
+    <li><a class='mobile-menu-link' href="/writings">writings </a></li>
+    <li><a class='mobile-menu-link' href="/work">code + design </a></li>
+    <li><a class='mobile-menu-link' href="/about">about </a></li>
   </ul>
 </nav>
