--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class='nav'>
+<nav class='nav visible-lg'>
   <ul class='nav-list'>
     <li class='nav-list-item'><a class='active' href="/blog">Blog</a></li>
     <li class='nav-list-item'><a href="/talks">Talks</a></li>
