--- a/_layouts/inverted.html
+++ b/_layouts/inverted.html
@@ -15,7 +15,7 @@ layout: base
 
   <div class="content-main-wrapper">
     <div class="content-main">
-      <section class="container-padding inverted">
+      <section class="container-padding inverted clearfix">
         {% include nav.html %}
         
         {{ content }}
