--- a/_compass/modules/_listing.scss
+++ b/_compass/modules/_listing.scss
@@ -3,3 +3,13 @@
   padding: 0;
   list-style-type: none;
 }
+.listing-item {
+  padding: 0.3em .5em 0.3em 0.1em;
+  line-height: 1.1;
+
+  &::before {
+    content: "\2022";
+    color: $red;
+    padding-right: 2px;
+  }
+}
