--- a/_compass/tools/_utilities.scss
+++ b/_compass/tools/_utilities.scss
@@ -25,6 +25,9 @@
 .u-margin-bottom {
   margin-bottom: 2em !important;
 }
+.u-margin-bottom-small {
+  margin-bottom: 0.5em;
+}
 .u-margin-top-large {
   margin-top: 30px;
 }
